--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ body {
   background-color: #fff5ee;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 .background .page1 {
   position: absolute;
@@ -35,7 +36,7 @@ body {
   height: 550px;
   margin-top: 20px;
 }
-.roundImg span {
+.roundImg span.img {
   position: relative;
   display: inline-block;
   background-image: url("/content/page1/ImageShape1.png");
@@ -109,4 +110,85 @@ body {
 }
 
 /* about info */
+.aboutInfo {
+  position: relative;
+  width: 750px;
+  text-align: center;
+  margin-top: 50px;
+}
+.aboutInfo .nama {
+  margin-left: 70px;
+  width: 700px;
+}
+.nama h1 {
+  position: relative;
+  color: #deb37e;
+  font-size: 90px;
+  font-weight: bold;
+  width: fit-content;
+  left: -42px;
+  line-height: 80px;
+}
+.nama span {
+  position: relative;
+  color: #7f7770;
+  font-size: 90px;
+  font-weight: bold;
+  left: 320px;
+}
+.aboutInfo .profile {
+  width: 500px;
+  margin-top: 40px;
+  margin-left: 70px;
+  text-align: left;
+}
+.profile h2 {
+  font-size: 35px;
+  font-weight: bold;
+  color: #deb37e;
+}
+.profile p {
+  margin-top: 30px;
+  font-size: 25px;
+  font-weight: 500;
+  width: 500px;
+}
+.aboutInfo .resume {
+  position: relative;
+  background-color: #deb37e;
+  margin-top: 100px;
+  width: 180px;
+  height: 50px;
+  border-radius: 20px;
+}
+.aboutInfo .resume span{
+  position: relative;
+  width: fit-content;
+  top: 5px;
+  left: 18px;
+}
+.resume a{
+    text-decoration: none ;
+    font-size: 25px;
+    font-weight: 600;
+    color: black;
+}
+
+/* Contact Info */
+.contactInfo{
+  background-color: #FFF5EE;
+  /* box-shadow: 5px 5px inset #DBCEC6; */
+  margin-top: 30px;
+  width: 400px;
+  height: 120px;
+}
+.contactInfo h1{
+  font-size: 30px;
+}
+.contactInfo .sosmed{
+  text-align: left;
+}
+.contactInfo .sosmed img{
+  width: 30px;
+}
 
